feat: add user profile pictures (#29)
